--- a/ozon-fashion-app/templates/index.html
+++ b/ozon-fashion-app/templates/index.html
@@ -179,7 +179,7 @@
             <div class="message user">
                 <div class="bubble user">
                     <div>Вы загрузили фото:</div>
-                    <img src="{{ user_photo }}" alt="Ваше фото" style="max-width:160px; margin:10px 0;">
+                    <img src="/{{ user_photo }}" alt="Ваше фото" style="max-width:160px; margin:10px 0;">
                     {% if comment %}
                     <div style="margin-top:8px;">Комментарий: {{ comment }}</div>
                     {% endif %}
